src/objects/FGW_Saved_Search__c.object
<CustomObject>
    <description>Object that represents a search to track in GovWatcher.  Consists of parameters, a level (State/Federal/etc.) and an optional API specification.</description>
    <fields>
        <fullName>API_Name__c</fullName>
        <description>An optional API specification for this search.  If no name is provided, the default API for the specified universe is used</description>
        <inlineHelpText>An optional API specification for this search.  If no name is provided, the default API for the specified universe is used</inlineHelpText>
        <label>API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advanced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advanced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Search_Description__c</fullName>
        <label>Search Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Search_Parameters__c</fullName>
        <description>A semicolon delimited list of query parameters, operations and values.</description>
        <inlineHelpText>A semicolon delimited list of query parameters, operations and values.</inlineHelpText>
        <label>Search Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Saved Search</label>
    <nameField>
        <label>Search Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Saved Searches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>